# pixel-buddy

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: development-progress.md  pixel-buddy-technical-spec-v2.md
scripts/: generate_icons.py
src/: index.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/core/engine/: index.ts  rule-engine.ts
src/core/events/: event-bus.ts  event-types.ts  index.ts
src/core/state/: index.ts  state-machine.ts
src/systems/animation/: animator.ts  index.ts  sprite-manager.ts
src/systems/customization/: appearance.ts  index.ts  personality.ts
src/systems/interaction/: index.ts  input-handler.ts
src/systems/theme/: index.ts  theme-manager.ts
src/ui/: index.ts
src/ui/components/: config-manager.ts  index.ts  pet-ui.ts
src/ui/settings/: index.ts  settings-dialog.ts
src/utils/: helpers.ts  index.ts  logger.ts  storage.ts
